--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <h1>My contact details</h1>
     <p><strong>Address</strong>-Jaipur rajasthan</p>
     <p><strong>Email</strong>-agarwal.aayush2003@gmail.com</p>
-    <form class="" action="mailto:agarwal,aayush2003@gmail.com" method="text/plain">
+    <form class="" action="mailto:agarwal.aayush2003@gmail.com" method="text/plain">
       <label for="">your name:</label>
       <input type="text" name="" value=""><br>
       <label for="">phone no:</label>
