--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,11 @@
     <h1>My contact details</h1>
     <p><strong>Address</strong>-Jaipur rajasthan</p>
     <p><strong>Email</strong>-agarwal.aayush2003@gmail.com</p>
-    <form class="" action="mailto:agarwal.aayush2003@gmail.com"  method="post" enctype="text/plain">
-      <label for="">your name:</label>
-      <input type="text" name="" value=""><br>
-      <label for="">phone no:</label>
-      <input type="text" name="" value="">
+    <form action="mailto:agarwal.aayush2003@gmail.com" method="post" enctype="text/plain">
+      <label >your name:</label>
+      <input type="text" name="your name" value=""><br>
+      <label >phone no:</label>
+      <input type="text" name="your phone no." value="">
       <input type="submit" name="" >
     </form>
   </body>
